# apidocs.swagger.yaml
@@ -1,114 +1,27 @@
-swagger: "2.0"
-info:
-  title: An example of generating swagger via gRPC ecosystem.
-  version: "1.0"
-  contact:
-    url: https://github.com/michilu/proto-api
-    email: none@example.com
-  license:
-    name: Apache-2.0
-    url: https://github.com/michilu/proto-api/blob/master/LICENSE
-tags:
-  - name: HealthService
-  - name: ExampleService
-schemes:
-  - https
-  - wss
 consumes:
   - application/json
-produces:
-  - application/json
-paths:
-  /healthCheck:
-    get:
-      operationId: HealthService_Check
-      responses:
-        "200":
-          description: A successful response.
-          schema:
-            $ref: '#/definitions/v1CheckResponse'
-        default:
-          description: An unexpected error response.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-      parameters:
-        - name: service
-          in: query
-          required: false
-          type: string
-      tags:
-        - HealthService
-  /v1/example/{id}:
-    post:
-      operationId: ExampleService_Query
-      responses:
-        "200":
-          description: A successful response.
-          schema:
-            $ref: '#/definitions/v1ExampleServiceQueryResponse'
-        default:
-          description: An unexpected error response.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-      parameters:
-        - name: id
-          in: path
-          required: true
-          type: string
-          format: uuid
-        - name: body
-          in: body
-          required: true
-          schema:
-            type: object
-      tags:
-        - ExampleService
-      security:
-        - ApiKeyAuth: []
-          OAuth2:
-            - read
-            - write
 definitions:
   CheckResponseServingStatus:
-    type: string
+    default: SERVING_STATUS_UNKNOWN_UNSPECIFIED
     enum:
       - SERVING_STATUS_UNKNOWN_UNSPECIFIED
       - SERVING_STATUS_SERVING
       - SERVING_STATUS_NOT_SERVING
-    default: SERVING_STATUS_UNKNOWN_UNSPECIFIED
+    type: string
   protobufAny:
-    type: object
+    additionalProperties: {}
     properties:
       '@type':
         type: string
-    additionalProperties: {}
-  protov1Response:
     type: object
+  protov1Response:
     properties:
       code:
         $ref: '#/definitions/rpcCode'
       message:
         type: string
+    type: object
   rpcCode:
-    type: string
-    enum:
-      - OK
-      - CANCELLED
-      - UNKNOWN
-      - INVALID_ARGUMENT
-      - DEADLINE_EXCEEDED
-      - NOT_FOUND
-      - ALREADY_EXISTS
-      - PERMISSION_DENIED
-      - UNAUTHENTICATED
-      - RESOURCE_EXHAUSTED
-      - FAILED_PRECONDITION
-      - ABORTED
-      - OUT_OF_RANGE
-      - UNIMPLEMENTED
-      - INTERNAL
-      - UNAVAILABLE
-      - DATA_LOSS
     default: OK
     description: |-
       The canonical error codes for gRPC APIs.
@@ -239,45 +152,132 @@ definitions:
        - DATA_LOSS: Unrecoverable data loss or corruption.
 
       HTTP Mapping: 500 Internal Server Error
+    enum:
+      - OK
+      - CANCELLED
+      - UNKNOWN
+      - INVALID_ARGUMENT
+      - DEADLINE_EXCEEDED
+      - NOT_FOUND
+      - ALREADY_EXISTS
+      - PERMISSION_DENIED
+      - UNAUTHENTICATED
+      - RESOURCE_EXHAUSTED
+      - FAILED_PRECONDITION
+      - ABORTED
+      - OUT_OF_RANGE
+      - UNIMPLEMENTED
+      - INTERNAL
+      - UNAVAILABLE
+      - DATA_LOSS
+    type: string
   rpcStatus:
-    type: object
     properties:
       code:
-        type: integer
         format: int32
+        type: integer
+      details:
+        items:
+          $ref: '#/definitions/protobufAny'
+          type: object
+        type: array
       message:
         type: string
-      details:
-        type: array
-        items:
-          type: object
-          $ref: '#/definitions/protobufAny'
-  v1CheckResponse:
     type: object
+  v1CheckResponse:
     properties:
       status:
         $ref: '#/definitions/CheckResponseServingStatus'
-  v1ExampleServiceQueryResponse:
     type: object
+  v1ExampleServiceQueryResponse:
     properties:
       value:
         $ref: '#/definitions/protov1Response'
-securityDefinitions:
-  ApiKeyAuth:
-    type: apiKey
-    name: X-API-Key
-    in: header
-  OAuth2:
-    type: oauth2
-    flow: accessCode
-    authorizationUrl: https://example.com/oauth/authorize
-    tokenUrl: https://example.com/oauth/token
-    scopes:
-      admin: Grants read and write access to administrative information
-      read: Grants read access
-      write: Grants write access
+    type: object
+info:
+  contact:
+    email: none@example.com
+    url: https://github.com/michilu/proto-api
+  license:
+    name: Apache-2.0
+    url: https://github.com/michilu/proto-api/blob/master/LICENSE
+  title: An example of generating swagger via gRPC ecosystem.
+  version: "1.0"
+paths:
+  /healthCheck:
+    get:
+      operationId: HealthService_Check
+      parameters:
+        - in: query
+          name: service
+          required: false
+          type: string
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1CheckResponse'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      tags:
+        - HealthService
+  /v1/example/{id}:
+    post:
+      operationId: ExampleService_Query
+      parameters:
+        - format: uuid
+          in: path
+          name: id
+          required: true
+          type: string
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1ExampleServiceQueryResponse'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      security:
+        - ApiKeyAuth: []
+          OAuth2:
+            - read
+            - write
+      tags:
+        - ExampleService
+produces:
+  - application/json
+schemes:
+  - https
+  - wss
 security:
   - ApiKeyAuth: []
     OAuth2:
       - read
       - write
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: X-API-Key
+    type: apiKey
+  OAuth2:
+    authorizationUrl: https://example.com/oauth/authorize
+    flow: accessCode
+    scopes:
+      admin: Grants read and write access to administrative information
+      read: Grants read access
+      write: Grants write access
+    tokenUrl: https://example.com/oauth/token
+    type: oauth2
+swagger: "2.0"
+tags:
+  - name: HealthService
+  - name: ExampleService
